--- a/src/design-system/layout/utilities/container/container.module.scss
+++ b/src/design-system/layout/utilities/container/container.module.scss
@@ -5,13 +5,20 @@
   display: block;
   width: 100%;
   margin: 0 auto;
-  max-width: 1800px;
+  max-width: 2200px;
   padding: 0 vr.$spacingSize9XL;
 }
 
 .fullWidth {
   max-width: 100%;
 }
+
+@media screen and (max-width: 1920px) {
+  .container {
+    max-width: 1800px;
+  }
+}
+
 
 @include mx.devices(desktop) {
   .container {
