--- a/src/components/shared/spinner/spinner.module.scss
+++ b/src/components/shared/spinner/spinner.module.scss
@@ -26,7 +26,7 @@
   height: 50px;
 
   .path {
-    stroke: var(--colorSpinner);
+    stroke: var(--colorWhite);
     stroke-linecap: round;
     animation: dash 1.5s ease-in-out infinite;
   }
