--- a/src/components/views/about-us/localization-section/localization-section.module.scss
+++ b/src/components/views/about-us/localization-section/localization-section.module.scss
@@ -2,22 +2,41 @@
 @use "@design-system/styles/utilities/mixins" as mx;
 
 .wrapper {
-  min-height: 800px;
   display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
+  background: black;
 }
 
-.form {
+.localizationBoxWrapper {
+  position: absolute;
+}
+
+.localizationBox {
   padding: vr.$spacingSizeL vr.$spacingSize3XL;
   width: 50%;
-  height: 600px;
+  max-width: 750px;
   border: 1px solid var(--colorWhite);
   border-radius: vr.$spacingSizeS;
   position: relative;
+  left: 0;
   background-color: rgba(0, 0, 0, 0.85);
   z-index: 1;
+  margin: vr.$spacingSize4XL 0;
+}
+
+.localizationBoxImage {
+  width: 70%;
+  height: auto;
+  margin: 0 0 vr.$spacingSizeL;
+}
+
+.pinIcon {
+  min-width: 28px;
+}
+
+.officeAddress {
+  margin: vr.$spacingSize3XL 0 vr.$spacingSizeL;
+  gap: vr.$spacingSizeXS;
 }
 
 .title {
@@ -26,8 +45,32 @@
   margin-bottom: vr.$spacingSizeL;
 }
 
+.imageWrapper {
+  position: relative;
+}
+
+.localizationButton {
+  min-width: 0;
+  height: 70px;
+  @include mx.fontSize(28px);
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+}
+
+.btnWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: vr.$spacingSizeL;
+  left: vr.$spacingSizeL;
+}
+
 @include mx.devices(desktop) {
-  .form {
+  .localizationBox {
     width: 60%;
   }
 
@@ -37,18 +80,23 @@
 }
 
 @include mx.devices(tablet) {
-  .form {
+  .localizationBox {
     width: 570px;
   }
 }
 
 @include mx.devices(mobile) {
-  .form {
+  .localizationBox {
     width: 90%;
-    margin: 0 auto;
+    margin: vr.$spacingSizeXXL auto;
     padding: vr.$spacingSizeL vr.$spacingSizeXL;
   }
 
+  .btnWrapper {
+    top: vr.$spacingSizeS;
+    left: vr.$spacingSizeS;
+    bottom: auto;
+  }
   .title {
     @include mx.fontSize(32px);
   }
@@ -59,7 +107,7 @@
 }
 
 @media only screen and (max-width: 500px) {
-  .form {
+  .localizationBox {
     width: 100%;
   }
 
