--- a/src/components/views/home/contact/contact-form/contact-form.module.scss
+++ b/src/components/views/home/contact/contact-form/contact-form.module.scss
@@ -5,10 +5,11 @@
   width: 100%;
   border: 1px solid var(--colorWhite);
   background-color: rgba(0, 0, 0, 0.6);
-  height: 400px;
+
   position: relative;
   border-radius: 8px;
   color: var(--colorWhite);
+  padding: 0 vr.$spacingSizeXXL;
 }
 
 .backgroundImage {
@@ -21,4 +22,23 @@
   @include mx.fontGlow(6px);
   text-align: center;
   padding: vr.$spacingSizeL vr.$spacingSizeXXL;
+}
+
+.btnWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: vr.$spacingSizeL 0 vr.$spacingSizeXXL;
+}
+
+@include mx.devices(mobile) {
+  .title {
+    @include mx.fontSize(28px);
+    padding: vr.$spacingSizeL 0;
+  }
+}
+
+.wrapper {
+  padding: 0 vr.$spacingSizeXL;
 }
