--- a/src/design-system/styles/global.scss
+++ b/src/design-system/styles/global.scss
@@ -18,4 +18,7 @@ html {
   // Custom colors
   --colorThunder: #4d4d4d;
   --colorCapeHope: #d7d7d7;
+
+  --colorErrorText: #ff0000;
+  --colorTextLink: #007bec;
 }
