--- a/src/components/shared/form/checkbox/checkbox.module.scss
+++ b/src/components/shared/form/checkbox/checkbox.module.scss
@@ -11,7 +11,7 @@
   grid-template-rows: 1fr;
   grid-column-gap: vr.$spacingSizeM;
   cursor: pointer;
-    margin-top: vr.$spacingSizeS;
+  margin-top: vr.$spacingSizeS;
 }
 
 .checkboxRect {
@@ -70,6 +70,5 @@
 
 .errorText {
   color: var(--colorErrorText);
-  @include mx.fontSize(12px)
+  @include mx.fontSize(12px);
 }
-
