--- a/src/components/shared/form/file-field/file-field.module.scss
+++ b/src/components/shared/form/file-field/file-field.module.scss
@@ -22,11 +22,10 @@
   width: 100%;
   border: 1px solid var(--colorWhite);
   padding: vr.$spacingSizeS vr.$spacingSizeM;
+  height: 48px;
   @include mx.fontSize(16px);
   margin: 0 0 vr.$spacingSizeXS 0;
-  min-height: 130px;
   background: transparent;
-  resize: vertical;
   border-radius: 5px;
 
   &:focus {
