Adjusted changes based on doc

--- a/src/design-system/styles/global.scss
+++ b/src/design-system/styles/global.scss
@@ -1,5 +1,7 @@
 @import "reset";
 @import "./global/swiper";
+@import "./global/page-loading-indicator";
+
 body,
 html {
   font-family: var(--fontFamilyPrimary);
