--- a/src/components/views/contact/team/team.module.scss
+++ b/src/components/views/contact/team/team.module.scss
@@ -29,6 +29,7 @@
   position: relative;
   color: var(--colorWhite);
   justify-content: flex-end;
+  overflow: hidden;
 }
 
 .content {
@@ -47,10 +48,20 @@
   z-index: 1;
   height: 500px;
   width: auto;
+  aspect-ratio: 445/800;
+  transform-style: preserve-3d;
+  perspective: 1000px;
 
   img {
+    position: absolute;
     width: auto;
     height: 100%;
+    backface-visibility: hidden;
+    transition: 0.5s;
+  }
+
+  .image2 {
+    transform: rotateY(180deg);
   }
 }
 .name {
@@ -82,11 +93,16 @@
   align-items: center;
   justify-content: center;
   width: 35px;
+  min-width: 35px;
   height: 35px;
   background: var(--colorWhite);
   border-radius: 50%;
 }
+.emailText {
+  display:flex;
+  flex-wrap: wrap;
 
+}
 @include mx.devices(desktop) {
   .team {
     padding: vr.$spacingSizeXXL 0;
@@ -138,5 +154,23 @@
   .image {
     height: 300px;
     margin: auto;
+  }
+}
+
+@media only screen and (min-width: 770px) {
+  .image {
+    transition: 0.5s ease-in-out;
+
+    &:hover {
+      cursor:pointer;
+
+      .image1 {
+        transform: rotateY(-180deg);
+      }
+
+      .image2 {
+        transform: rotateY(0deg);
+      }
+    }
   }
 }
