--- a/src/components/views/home/contact/contact.module.scss
+++ b/src/components/views/home/contact/contact.module.scss
@@ -19,18 +19,18 @@
   display: flex;
   position: relative;
   z-index: 1;
+  gap: vr.$spacingSize6XL;
 }
 
 .contactFormWrapper {
-  width: 40%;
+  width: 50%;
 }
 
 .addressWrapper {
-  width: 60%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   color: var(--colorWhite);
-  padding-left: vr.$spacingSize4XL;
   gap: vr.$spacingSizeL;
   text-align: right;
   align-items: flex-end;
