--- a/src/components/views/home/our-offer/our-offer.module.scss
+++ b/src/components/views/home/our-offer/our-offer.module.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   background-color: var(--colorWhite);
   color: var(--colorBlack);
-  padding: vr.$spacingSize5XL 0;
+  padding: vr.$spacingSize5XL 0 vr.$spacingSize8XL;
 }
 
 .mainTitle {
@@ -15,6 +15,7 @@
   @include mx.fontGlow(8px);
   text-align: center;
   padding: 0 0 vr.$spacingSize3XL;
+  color: var(--colorWhite);
 }
 
 .content {
@@ -38,7 +39,7 @@
   border-radius: 8px;
   overflow: hidden;
   flex-grow: 1;
-  box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.25);
+  border: 1px solid var(--colorWhite);
 }
 
 .contentBox {
@@ -61,8 +62,8 @@
   background: linear-gradient(
     0deg,
     rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 0.7558998599439776) 25%,
-    rgba(255, 255, 255, 0) 81%
+    rgba(255, 255, 255, 0.1558998599439776) 35%,
+    rgba(255, 255, 255, 0) 91%
   );
   width: 100%;
   height: 100%;
@@ -77,8 +78,8 @@
 }
 
 .boxDescription {
-  @include mx.fontSize(18px);
-  padding-top: vr.$spacingSizeXXS;
+  @include mx.fontSize(20px);
+  padding: vr.$spacingSizeL 0;
 }
 
 .btnWrapper {
