--- a/src/components/views/home/contact/contact.module.scss
+++ b/src/components/views/home/contact/contact.module.scss
@@ -106,7 +106,8 @@
   .element {
     justify-content: flex-start;
 
-    & > span, & > .nestedList {
+    & > span,
+    & > .nestedList {
       order: 2;
     }
   }
