--- a/src/components/views/contact/team/team.module.scss
+++ b/src/components/views/contact/team/team.module.scss
@@ -30,27 +30,31 @@
   color: var(--colorWhite);
   justify-content: flex-end;
   overflow: hidden;
+  height: 505px;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  flex-shrink: inherit;
 }
 
 .content {
-  background: var(--colorBlack);
   width: 100%;
   padding: vr.$spacingSizeM vr.$spacingSizeXL vr.$spacingSize4XL;
-  border-radius: 15px;
-  position: absolute;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  background: var(--colorBlack);
+  border-radius: 15px;
 }
 
 .image {
-  position: relative;
+  position: absolute;
   z-index: 1;
-  height: 500px;
+  height: 505px;
   width: auto;
   aspect-ratio: 445/800;
-  transform-style: preserve-3d;
   perspective: 1000px;
+  right: 0;
+  bottom: 0;
 
   img {
     position: absolute;
@@ -58,6 +62,8 @@
     height: 100%;
     backface-visibility: hidden;
     transition: 0.5s;
+    bottom: 0;
+    right: 0;
   }
 
   .image2 {
@@ -68,12 +74,22 @@
   font-family: var(--fontFamilySecondary);
   @include mx.fontSize(62px);
   text-shadow: 3px 3px 0px #587295;
+
+  width: 50%;
+  white-space: nowrap;
+  position: relative;
+  z-index: 2;
 }
 
 .role {
   font-family: var(--fontFamilySecondary);
   @include mx.fontSize(24px);
   text-shadow: 3px 3px 0px #587295;
+
+  width: 50%;
+  white-space: nowrap;
+  position: relative;
+  z-index: 2;
 }
 
 .list {
@@ -81,6 +97,11 @@
   flex-direction: column;
   margin-top: vr.$spacingSizeXL;
   gap: vr.$spacingSizeS;
+
+  width: 50%;
+  white-space: nowrap;
+  position: relative;
+  z-index: 2;
 }
 
 .element {
@@ -103,6 +124,10 @@
   flex-wrap: wrap;
 }
 @include mx.devices(desktop) {
+  .item {
+    height: 350px;
+  }
+
   .team {
     padding: vr.$spacingSizeXXL 0;
     gap: vr.$spacingSizeL;
@@ -150,9 +175,18 @@
     position: relative;
   }
 
+  .item {
+    height: auto;
+  }
   .image {
+    position: relative;
     height: 300px;
     margin: auto;
+  }
+
+  .name, .role, .list {
+    width: 100%;
+    white-space: none;
   }
 }
 
